# hackathon

./: README.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  env.local.example  package-lock.json  package.json
frontend/scripts/: build_cortex_mesh.js  build_cortex_mesh.py  generate_brain_mesh.js  generate_brain_mesh.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/analyze/: route.ts
frontend/src/app/api/transcribe/: route.ts
frontend/src/components/: Dither.jsx  GlassSurface.jsx  NeuralField.jsx  agent-card.tsx  analysis-panel.tsx  brain-atlas.tsx  brain-viewer.tsx  cognition-report-panel.tsx  dashboard-view.tsx  fluid-noise-bg.css  fluid-noise-bg.jsx  history-panel.tsx  input-command-panel.tsx  launch-sequence.tsx  mission-control-view.tsx  neural-cortex-viewer.tsx  neuro-sidebar.tsx  neurotrace-splash.tsx  prism-surface.jsx  profile-radar-chart.tsx  radar-chart.tsx  report-panel.tsx  session-history-panel.tsx  signal-agent-card.tsx  signal-field-viewer.tsx  signal-glitch-bg.css  signal-glitch-bg.tsx  site-header.tsx  speech-wave-panel.tsx  startup-splash.tsx  waveform-panel.tsx  workspace-sidebar.tsx  workspace-topbar.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useAnalysisHistory.ts  useAudioRecorder.ts  useColorMode.ts  useSessionHistory.ts  useTheme.ts  useVoiceRecorder.ts
