[project]
name = "cortexflow-backend"
version = "0.1.0"
description = "CortexFlow deterministic analysis backend with Groq model routing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.10.0",
]
